# linklist

./: .gitignore  Makefile.in  configure  configure.ac
src/: Makefile.am  Makefile.in  linklist.c  linklist.h
