AC_INIT([linklist], [0.0.1], [https://github.com/Maloux1/linklist.git])

AM_INIT_AUTOMAKE([-Wall])

AC_PROG_CC

AM_PROG_AR([])

LT_INIT

AC_CHECK_HEADER([stdlib.h])
AC_CHECK_HEADER([stdint.h])
AC_CHECK_HEADER([record.h])

AC_CONFIG_HEADERS([src/config.h])

AC_CONFIG_FILES([
src/Makefile
Makefile
])

AC_OUTPUT
